Attempt to improve memory usage for travis